--- a/css/skills.css
+++ b/css/skills.css
@@ -14,6 +14,7 @@
 
 .card:hover {
     transform: scale(1.05);
+    border: 2px solid var(--color-linguagem);
 }
 
 .card i {
@@ -25,38 +26,9 @@
     color: var(--text-color);
 }
 
-.c-python .text-content h3, .c-python .title-card i {
-   color: var(--color-python);
+.text-content h3, .title-card i {
+   color: var(--color-linguagem);
 }
-
-.c-python:hover {
-    border: 2px solid var(--color-python);
-}
-
-.c-css .text-content h3, .c-css .title-card i {
-    color: var(--color-css);
-}
-
-.c-css:hover {
-    border: 2px solid var(--color-css);
-}
-
-.c-html .text-content h3, .c-html .title-card i {
-    color: var(--color-html);
-}
-
-.c-html:hover {
-    border: 2px solid var(--color-html);
-}
-
-.c-js .text-content h3, .title-card i {
-    color: var(--color-js);
-}
-
-.c-js:hover {
-    border: 2px solid var(--color-js);
-}
-
 
 .title-card  h3 {
     margin: 1rem 0;
@@ -79,11 +51,9 @@
     .skills {
         grid-template-columns: repeat(2, 1fr);
      }
-     
 }
 
-
-@mdia (max-width: 600px) {
+@media (max-width: 600px) {
     .skills {
         grid-template-columns: repeat(1, 1fr);
      }
