--- a/css/projetos.css
+++ b/css/projetos.css
@@ -1,9 +1,3 @@
-.container-img img {
-    width: 100%;
-    height: 100%;
-    max-width: 300px;   
-}
-
 .wrapper-projetos {
     display: flex;
     justify-content: center;
@@ -68,6 +62,7 @@
     border-radius: 6px;
     overflow: hidden;
     margin-bottom: 6px;
+    box-shadow:  3px 3px 7px rgba(255, 255, 255, 0.1);
 }
 
 .list-langue {
@@ -82,4 +77,27 @@
     text-transform: uppercase;
     margin: 0 .2rem;
     list-style: none;
+    font-weight: 700;
+}
+
+.btn-ver-mais {
+    padding: .7rem 1rem;
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    border: none;
+    cursor: pointer;
+    font-weight: 700;
+    border-radius: .2rem;
+    margin: 1rem auto;
+}
+
+.btn-ver-mais i {
+    transition: .2s;
+
+}
+
+.btn-ver-mais:hover i {
+    color: rgb(0, 0, 0);
+    transform: translateX(.8rem);
 }
