adicionando page projetos/adicionando bgc linera

--- a/css/contatos.css
+++ b/css/contatos.css
@@ -1,6 +1,7 @@
 #contatos {
     background-color: rgba(0, 0, 0, 0.96);
     padding:1rem 5%;
+    box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.04);
 }
 
 .wrapper-contatos {
@@ -34,11 +35,33 @@
 }
 .contato__sociais a:hover {
     color: var(--white);
+
+ 
+    background: #ff0000; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ff0000, #ff8800); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ff0000, #ff8800); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;  
 }
 
 .contato__sociais i {
     font-size: 2rem;
     cursor: pointer;
+}
+.contato__contatos ul li{
+    transition: .2s;
+    display: flex;
+    gap: 1rem;
+    padding: .2rem;
+}
+.contato__contatos ul li:hover{
+    background: #ff0000; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ff0000, #ff8800); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ff0000, #ff8800); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;  
 }
 
 @media (max-width: 750px) {
