--- a/css/header.css
+++ b/css/header.css
@@ -41,10 +41,10 @@
 }
 
 .menu-hamburg::after, .menu-hamburg::before {
-    background-color: var(--white);
+    background: var(--color-gradient);
     content: '';
     width: 100%;
-    height: 2px;
+    height: 3px;
     display: block;
     transition: .5s;
 }
@@ -121,17 +121,18 @@
 
 .menu ul li a::after {
     content: '';
-    background-color: var(--white);
+    background: var(--color-gradient);
     width: 0;
-    height: 2px;
+    height: 3px;
     position: absolute;
-    left: 0;
+    left: 50%;
+    transform: translate(-50%);
     bottom: 20px;
     transition: width .2s;
 }
 
 .menu ul li a:hover:after {
-    width: 100%;
+    width: 80%;
     background-color: var(--white);
 } 
 
