--- a/css/header.css
+++ b/css/header.css
@@ -41,7 +41,7 @@
 }
 
 .menu-hamburg::after, .menu-hamburg::before {
-    background: var(--color-gradient);
+    background: var(--white);
     content: '';
     width: 100%;
     height: 3px;
@@ -147,7 +147,7 @@
     }
     .menu {
         transition: .5s;
-        background-color: var(--white);
+        background-color: var(--black);
         position: fixed;
         left: -110%;
         top: 0;
@@ -167,7 +167,8 @@
         margin-bottom: 2rem;
     }
     .menu ul li a {
-        color: var(--black);
+        color: var(--white);
+        font-size: 1.5rem;
         /* display: block; */
     }
 
