Alterando nivel de linguagem

--- a/css/projetos.css
+++ b/css/projetos.css
@@ -20,7 +20,11 @@
     overflow: hidden;
 }
 
-.projeto__img {
+.projeto:hover {
+    box-shadow: 0px 0px 40px rgba(255, 255, 255, 0.07);
+}
+
+.projeto__img { 
     height: 10rem;
     background-size: cover;
     background-position: center;
