alteraçao nas skills/add title

--- a/css/projetos.css
+++ b/css/projetos.css
@@ -6,10 +6,10 @@
 
 .container-projetos {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .projeto {
