--- a/css/global.css
+++ b/css/global.css
@@ -4,9 +4,9 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-#home, #sobre, #projetos{
+#home, #skills, #projetos{
     background-color: var(--black);
-    padding: 9% 10%;
+    padding: 5rem 10%;
 }
 
 html {
@@ -44,4 +44,33 @@ html {
 
 .c-js {
     --color-linguagem: #F1DA1D;
+}
+
+
+/* Title ==========================================================*/
+
+.title-section {
+    text-align: center;
+    padding: 0 5%;
+    padding-bottom: 10%;
+}
+.title-section h1 {
+    font-size: 2rem;
+    color: var(--white);
+    position: relative;
+    display: inline;
+    z-index: 1;
+}
+
+
+.title-section h1::before {
+    content: '';
+    width: 90%;
+    right: 0;
+    bottom: 5px;
+    z-index: -1;
+    /* transform: translate(-50%); */
+    height: 7px;
+    background: var(--color-gradient);
+    position: absolute;
 }
