--- a/css/page-projetos.css
+++ b/css/page-projetos.css
@@ -1,35 +1,9 @@
 .center {
-    height: 75vh;
+    /* height: 75vh; */
     display: flex;
     align-items: center;
     justify-content: center;
 }
-#cabecalho-projetos {
-    text-align: center;
-    padding: 0 5%;
-    padding-bottom: 10%;
-}
-#cabecalho-projetos h1 {
-    font-size: 2rem;
-    color: var(--white);
-    position: relative;
-    display: inline;
-    z-index: 1;
-}
-
-
-#cabecalho-projetos h1::before {
-    content: '';
-    width: 90%;
-    right: 0;
-    bottom: 5px;
-    z-index: -1;
-    /* transform: translate(-50%); */
-    height: 7px;
-    background: var(--color-gradient);
-    position: absolute;
-}
-
 body {
     background-color: var(--black);
 }
