--- a/css/layout/cards.css
+++ b/css/layout/cards.css
@@ -34,9 +34,10 @@
 }
 
 .projeto__descricao {
-    height: 10rem;
+    height: 9rem;
     gap: .5rem;
     border-top: 1px solid rgba(255, 255, 255, 0.07);
+    background-color: rgba(19, 19, 19, 0.507);
     padding: 1rem;
     display: flex;
     flex-direction: column;
@@ -56,6 +57,8 @@
 }
 
 .projeto__descricao-title {
+    font-size: 1.4rem;
+    text-decoration: underline;
 }
 
 .projeto__descricao-text {
@@ -65,7 +68,7 @@
 
 .projeto__descricao-linguagens {
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .projeto__descricao-linguagens span {
