--- a/css/page/projetos.css
+++ b/css/page/projetos.css
@@ -1,7 +1,6 @@
 
 
 .btn-ver-mais {
-    padding: .7rem 1rem;
     display: flex;
     align-items: center;
     gap: .5rem;
@@ -10,8 +9,13 @@
     font-weight: 700;
     border-radius: .2rem;
     margin: 2rem auto;
-    color: var(--white);
     background: var(--color-gradient);
+}
+
+.btn-ver-mais a {
+    padding: .7rem 1rem;
+    text-decoration: none;
+    color: var(--white);    
 }
 
 .btn-ver-mais i {
