add new project TIME NOW

--- a/css/utils/global.css
+++ b/css/utils/global.css
@@ -36,3 +36,8 @@ html {
     background: var(--color-gradient);
     position: absolute;
 }
+
+.color-sass {
+    color: var(--color-linguagem);
+    font-weight: 700;
+}
