--- a/assets/css/utils/variaveis.css
+++ b/assets/css/utils/variaveis.css
@@ -35,3 +35,15 @@
 .c-react {
     --color-linguagem: #61DAFB;
 }
+
+.c-next {
+    --color-linguagem: #ffffff;
+}
+
+.c-dato_cms {
+    --color-linguagem: #f37862;
+}
+
+.c-firebase {
+    --color-linguagem: #FFCA30;
+}
